@@ -56,7 +56,7 @@ $parents = {
     'wxDataObjectComposite' => 'wxDataObject',
     'wxDataObjectSimple' => 'wxDataObject',
     'wxDialUpEvent' => 'wxEvent',
-    'wxDialog' => 'wxWindow',
+    'wxDialog' => 'wxTopLevelWindow',
     'wxDirDialog' => 'wxDialog',
     'wxDocChildFrame' => 'wxFrame',
     'wxDocMDIChildFrame' => 'wxMDIChildFrame',
